--- a/about.html
+++ b/about.html
@@ -2,13 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>home</title>
+	<title>About</title>
 </head>
 <body>
 
-	<h1>Test</h1>
-
-	<p>Homepage</p>
-
+	<p>ABout</p>
+	
 </body>
 </html>
