hello i just added a little bit of touches to the project
hello

--- a/index.html
+++ b/index.html
@@ -2,37 +2,30 @@
 <html>
 <head>
 	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="../emri_perkohshem/css/style.css">
 	<title>home</title>
 </head>
 <body>
 
-	<h1>Test</h1>
 
-	<p>Homepage</p>
+	<ul>
+		<li><a href="index.html" >Home</a></li>
+		<li><a href="about.html">About</a></li>
+		<li><a href="contact.html">Contact</a></li>
+		<li><a href="news.html">News</a></li>
+		<div class="dropdown">
+			<span>Dropdown</span>
+			<div class="dropdown-content">
+			  <p>Hello World!</p>
+			</div>
+		</div>
+		<input type="text" placeholder="Search..">
+	</ul>
 
-//navigation bar and search box
+	
+	  
 
-
-<div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="#about">About</a>
-  <a href="#contact">Contact</a>
-  <input type="text" placeholder="Search..">
-</div>
-
-
-//dropdown menu
-  <div class="dropdown">
-    <button class="dropbtn">Dropdown
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
-    </div>
-  </div>
-</div>
 
 </body>
 </html>
