--- a/Home_page.html
+++ b/Home_page.html
@@ -12,7 +12,7 @@
 		<a href="" class="menu_d">Home</a>
 		<a href="" class="menu_d">Movies</a>
 		<a href="" class="menu_d">About</a>
-		<a href="" class="menu_d">Help</a>
+		<a href="" class="menu_d">Reviews</a>
 
 		<a href="" id="li_su">Log In or Sign Up</a>
 
