--- a/Home_page.html
+++ b/Home_page.html
@@ -10,18 +10,36 @@
 		<h2 id="web_name">Emer_i_perkohshem</h2>
 
 		<a href="" class="menu_d">Home</a>
-		<a href="" class="menu_d">Movies</a>
 		<a href="" class="menu_d">About</a>
 		<a href="" class="menu_d">Reviews</a>
+		
 
 		<a href="" id="li_su">Log In or Sign Up</a>
-
-
 	</div>
 
-	<img src="images/img.png" id="logo">
+		<img src="images/img.png" id="logo">
+
+			<div class="dropdown">
+  			<a class="dropbtn">Movies</a>
+  			<div class="dropdown-content">
+   				<a href="#">Action</a>
+    			<a href="#">Fantasty</a>
+    			<a href="#">Superheroes</a>
+    			<a href="#">Horror</a>
+    			<a href="#">Comedy</a>
+    			<a href="#">Romance</a>
+    			<a href="#">Drama</a>
+    			<a href="#">Adventure</a>
+  </div>
+</div>
+
+	
 
 
+
+<div class="topnav">
+ <input type="text" placeholder="Search..">
+</div>
 
 
 </body>
