--- a/Home_page.html
+++ b/Home_page.html
@@ -6,6 +6,8 @@
 </head>
 <body id="home_page_body">
 
+<!-- _____________Menu_______________ -->
+
 	<div id="menu_div">
 		<h2 id="web_name">Emer_i_perkohshem</h2>
 
@@ -14,10 +16,12 @@
 		<a href="" class="menu_d">Reviews</a>
 		
 
-		<a href="" id="li_su">Log In or Sign Up</a>
+		<a href="Log_in.html" id="li_su">Log In or Sign Up</a>
 	</div>
 
 		<img src="images/img.png" id="logo">
+
+<!-- _____________Dropdown_______________ -->
 
 			<div class="dropdown">
   			<a class="dropbtn">Movies</a>
@@ -33,13 +37,13 @@
   </div>
 </div>
 
-	
 
-
+<!-- _____________Search_______________ -->
 
 <div class="topnav">
- <input type="text" placeholder="Search..">
+ <input type="text" placeholder=" Search movies..">
 </div>
+
 
 
 </body>
