--- a/Log_in.html
+++ b/Log_in.html
@@ -7,7 +7,7 @@
 <body id="login_body">
 
 	<div id="log_in">
-		<h2 id="h2">LogIn</h2>
+		<h2 id="h2">Log In</h2>
 
 		<p id="uname">Username:</p>
 
@@ -15,11 +15,13 @@
 
 		 <p id="pass">Password:</p>
 
-		 <input type="text" placeholder="excample@gmail.com" id="input2"><br>
+		 <input type="Password" placeholder="Password..." id="input2"><br>
 
-		 <button id="libtn">LogIn</button><br>
+		 <button id="libtn">Log In</button><br>
 
-		 <a href="" id="signup">If you are not registered yet, go to Sign Up</a>
+		 <a href="Sign_up.html" id="signup">If you are not registered yet, go to Sign Up</a><br>
+
+		 <a href="Home_page.html" class="backhome">Home</a>
 		
 	</div>
 
