Update Home_page , Sign_up and css

--- a/Sign_up.html
+++ b/Sign_up.html
@@ -25,7 +25,7 @@
 
 		 <input type="Password" placeholder="  Password..." id="input21"><br>
 
-		 <button id="libtn1">Sign Up</button><br>
+		 <button id="libtn1" href="Home_page.html">Sign Up</button><br>
 
 		 <a href="Log_in.html" id="signup">If you have acconut, go to Log In</a><br>
 
