--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Home Page</title>
-	<link rel="stylesheet" type="text/css" href="home_page_css/home_page.css">
+	<title>Review Front Page</title>
+	<link rel="stylesheet" type="text/css" href="mainrev_page/style.css">
+
+
 </head>
 <body id="home_page_body">
 
@@ -29,7 +31,7 @@
    				<a href="#">Action</a>
     			<a href="#">Fantasty</a>
     			<a href="#">Superheroes</a>
-    			<a href="#">Horror</a>
+    			<a href="emri_iperkohshem/horror.html">Horror</a>
     			<a href="#">Comedy</a>
     			<a href="#">Romance</a>
     			<a href="#">Drama</a>
@@ -37,14 +39,38 @@
   </div>
 </div>
 
+<hr>
+   <div class="genre" id="action">
+      <p class="paragraph">Action</p>
+   </div>
 
-<!-- _____________Search_______________ -->
+   <div class="genre" id="drama">
+      <p>Drama</p>
+   </div>
 
-<div class="topnav">
- <input type="text" placeholder=" Search movies..">
-</div>
+   <div class="genre" id="horror">
+      <p>Horror</p>
+   </div>
 
+   <div class="genre" id="comedy">
+      <p>Comedy</p>
+   </div>
 
+   <div class="genre" id="romance">
+      <p>Romance</p>
+   </div>
 
+   <div class="genre" id="adventure">
+      <p>Adventure</p>
+   </div>
+
+   <div class="genre" id="fantasy">
+      <p>Fantasy</p>
+   </div>
+
+   <div class="genre" id="crime">
+      <p>Crime</p>
+   </div>
+<script type="text/javascript"  src="mainrev_page/script.js"></script>
 </body>
 </html>
