--- a/reviews/horror.html
+++ b/reviews/horror.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Reviews Example</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style-review.css">
 </head>
 <body>
 
