added a background image
added a background image

--- a/Home_page.html
+++ b/Home_page.html
@@ -40,8 +40,14 @@
 
 <!-- _____________Search_______________ -->
 
-<div class="topnav">
+
+
+<div class="hero-image">
+  <div class="hero-text">
+  	<div class="topnav">
  <input type="text" placeholder=" Search movies..">
+</div>
+  </div>
 </div>
 
 
