updated index page and css

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <hr>
    <div class="genre" id="action">
-      <p class="paragraph">Action</p>
+      <p>Action</p>
    </div>
 
    <div class="genre" id="drama">
