--- a/Home_page.html
+++ b/Home_page.html
@@ -51,15 +51,17 @@
 </div>
 
 
-<div id="test">
+<div class="test">
 	
 <div id="hi">
 	
+
 </div>
 
 <div id="hi2">
 	
 </div>
+
 
 <div id="hi3">
 	
@@ -69,8 +71,10 @@
 	
 </div>
 
-
 </div>
+
+
+
 	
 </div>
 
