--- a/Home_page.html
+++ b/Home_page.html
@@ -13,7 +13,7 @@
 
 		<a href="" class="menu_d">Home</a>
 		<a href="" class="menu_d">About</a>
-		<a href="../emri_iperkohshem/index.html" class="menu_d">Reviews</a>
+		<a href="Main_review.html" class="menu_d">Reviews</a>
 		
 
 		<a href="Log_in.html" id="li_su">Log In or Sign Up</a>
