--- a/Main_review.html
+++ b/Main_review.html
@@ -13,7 +13,7 @@
 	<div id="menu_div">
 		<h2 id="web_name">Emer_i_perkohshem</h2>
 
-		<a href="" class="menu_d">Home</a>
+		<a href="Home_page.html" class="menu_d">Home</a>
 		<a href="" class="menu_d">About</a>
 		<a href="../emri_iperkohshem/index.html" class="menu_d">Reviews</a>
 		
@@ -40,6 +40,7 @@
 </div>
 
 <hr>
+<div id="cbox">
    <div class="genre" id="action">
       <p class="paragraph">Action</p>
    </div>
@@ -71,6 +72,7 @@
    <div class="genre" id="crime">
       <p>Crime</p>
    </div>
+  </div>
 <script type="text/javascript"  src="mainrev_page/script.js"></script>
 </body>
 </html>
