--- a/Home_page.html
+++ b/Home_page.html
@@ -53,25 +53,35 @@
 
 <div class="test">
 	
-<div id="hi">
+<div id="hi"></div>
+
+<div id="hi2"></div>
+
+<div id="hi3"></div>
+
+<div id="hi4"></div>
+
+
+
+</div>
+
+
+<div class="names">
+
+	<h3>Blina Kasumi </h3>
+
+<h3>Aniset Cej</h3>
+
+<h3>Jon Nuredini</h3>
+
+<h3>Orik Recica</h3>
+
 	
-
-</div>
-
-<div id="hi2">
-	
 </div>
 
 
-<div id="hi3">
-	
-</div>
 
-<div id="hi4">
-	
-</div>
 
-</div>
 
 
 
