--- a/reviews/comedy.html
+++ b/reviews/comedy.html
@@ -7,6 +7,7 @@
 <body>
 
 	<h1>Reviews:Comedy</h1>
+	<a  id="home" href="#">Home</a><br>
 	<hr>
 <div class="review">
 	<div class="child-container" >
