--- a/reviews/romance.html
+++ b/reviews/romance.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 
-	<h1>Reviews:Horror</h1>
+	<h1>Reviews:Drama</h1>
+	<a  id="home" href="#">Home</a><br>
 	<hr>
 <div class="review">
 	<div class="child-container" >
@@ -22,8 +23,9 @@
 	</div>
 	
 	<div class="paragraph">
-		<p> <b>The Blair Witch Project: </b>
-			I've no shame in saying it out loud, on the Internet or in public, The Blair Witch Project is one of my favourite films of all time. It is up at the top with Babadook,The Exorcist,Scream and The Departed.
+		<p> <b>La La Land: </b>
+			Very good musical,watched it with my daughter.
+			
 .</p>
 	</div>
 
@@ -48,7 +50,7 @@
 
 	
 	<div class="paragraph">
-		<p><b>Hereditary:</b>pretty good one we did have good scare.I heard there will be a part 2???I dont really know but it is really worth watching it.</p>
+		<p><b>Little Women</b>I watched the movie and am currently reading the book.It is definitely one of my favorite i loved it.</p>
 	</div>
 
 	<div  class="like">
@@ -77,7 +79,7 @@
 
 	
 	<div class="paragraph">
-		<p><b>Scream:</b>So compared to other horror movies like Halloween and Scary Movie I’d say that the Scream movie franchise is up their with them being some of the best horror movies of all time. </p> 
+		<p><b>Ticket to Paradise:</b>AS always, like every movie with George and Mrs.Roberts this one is definitely worth watching,especially with your kids. </p> 
 
 	<div  class="like">
 	 
@@ -102,7 +104,7 @@
 
 	
 	<div class="paragraph">
-		<p><b>Babadook:</b>It was one of the best movies i have seen,i loved it.</p>
+		<p><b>The Notebook:</b>Very good,i did cry at the end.</p>
 	</div>
 
 	<div  class="like">
@@ -128,7 +130,7 @@
 
 	
 	<div class="paragraph">
-		<p><b>Babadook:</b>will there be a part 2?</p>
+		<p><b>Beauty and the Best:</b>I liked it but nothing and i mean NOTHING can beat the original animated one.I grew with that one and tbh?I would choose that over the real life one any day.</p>
 	</div>
 
 	<div  class="like">
@@ -153,7 +155,7 @@
 
 	
 	<div class="paragraph">
-		<p><b>Babadook:</b>It was one of the best movies i have seen,i loved it.</p>
+		<p><b>The Lost City:</b>It was one of the best movies i have seen,i loved it.</p>
 	</div>
 
 	<div  class="like">
@@ -179,7 +181,8 @@
 
 	
 	<div class="paragraph">
-		<p><b>Babadook:</b>will there be a part 2?</p>
+		<p><b>Call me By your name:</b>This is a beautiful film -- one that is startlingly real. It feels so blisteringly sensual and in the moment, that it's almost impossible to ignore.
+</p>
 	</div>
 
 	<div  class="like">
